<resources>
    <string name="app_name">PowerHome</string>
    <string name="identifiant">Identifiez-vous</string>
    <string name="email">E-mail</string>
    <string name="mdp">Mot de passe</string>
    <string name="mdp_oublié">MOT DE PASSE OUBLIÉ ?</string>
    <string name="button_login">CONNECTEZ-VOUS</string>
    <string name="nouveau">Nouveau sur Jumia? </string>
    <string name="cree">CRÉÉ UN COMPTE</string>
    <string name="ou">OU</string>
    <string name="title_login">Connectez-vous</string>
    <string name="back_arrow">←</string>
    <string name="title_register">Créer un compte</string>
    <string name="nom">Nom</string>
    <string name="prenom">Prénom</string>
    <string name="creer_un_nv_compte">Créer un nouveau compte</string>

    <string name="bouton_facebook">Continuer avec Facebook</string>
</resources>