<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register_Activity">

    <LinearLayout
        android:id="@+id/topBar"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="@color/black"
        android:gravity="center_vertical"
        android:paddingHorizontal="16dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back_arrow"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:layout_marginEnd="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_register"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="24dp"
        app:layout_constraintTop_toBottomOf="@id/topBar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/creer_un_nv_compte"
            android:textSize="16sp"
            android:textColor="#888888"
            android:layout_marginBottom="24dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prenom"
            android:inputType="textPersonName"
            android:background="@android:color/transparent"
            android:paddingVertical="12dp"/>
        <View android:layout_width="match_parent" android:layout_height="1dp" android:background="#DDDDDD"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nom"
            android:inputType="textPersonName"
            android:background="@android:color/transparent"
            android:paddingVertical="12dp"
            android:layout_marginTop="16dp"/>
        <View android:layout_width="match_parent" android:layout_height="1dp" android:background="#DDDDDD"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:background="@android:color/transparent"
            android:paddingVertical="12dp"
            android:layout_marginTop="16dp"/>
        <View android:layout_width="match_parent" android:layout_height="1dp" android:background="#DDDDDD"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mdp"
            android:inputType="textPassword"
            android:background="@android:color/transparent"
            android:paddingVertical="12dp"
            android:layout_marginTop="16dp"/>
        <View android:layout_width="match_parent" android:layout_height="1dp" android:background="#DDDDDD"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="+33  ▼"
                android:textSize="16sp"
                android:textStyle="bold" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Mobile"
                android:inputType="phone"
                android:background="@android:color/transparent"
                android:paddingVertical="12dp"/>
        </LinearLayout>
        <View android:layout_width="match_parent" android:layout_height="1dp" android:background="#DDDDDD"/>

        <Button
            android:id="@+id/btn_validate"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="40dp"
            android:backgroundTint="#F68B1E"
            android:text="CRÉER MON COMPTE"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>