<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/black"
        android:gravity="center_vertical"
        android:paddingStart="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="←"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginEnd="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Connectez-vous"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <!-- CONTENU -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="24dp"
        android:layout_marginTop="20dp">

        <!-- TITRE -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/identifiant"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginBottom="24dp"
            android:paddingBottom="20dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/mail"
                android:layout_marginEnd="12dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:background="@android:color/transparent"/>
        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#DDDDDD"
            android:layout_marginBottom="24dp"/>

        <!-- MOT DE PASSE -->
        <!-- MOT DE PASSE -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/lock"
                android:layout_marginEnd="12dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mdp"
                android:inputType="textPassword"
                android:background="@android:color/transparent"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#DDDDDD"/>

        <!-- MOT DE PASSE OUBLIE -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mdp_oublié"
            android:textColor="@color/facebook_blue"
            android:textSize="12sp"
            android:gravity="end"
            android:layout_marginTop="8dp"/>

        <!-- BOUTON -->
        <Button
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/button_login"
            android:textColor="@color/white"
            android:backgroundTint="#F68B1E"
            android:layout_marginTop="32dp" />

        <!-- NOUVEAU SUR JUMIA -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="40dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nouveau"
                android:textSize="13sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="CRÉER UN COMPTE"
                android:textColor="@color/facebook_blue"
                android:textStyle="bold"
                android:textSize="13sp"
                android:layout_marginStart="4dp"/>
        </LinearLayout>

        <!-- OU -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginVertical="24dp">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="#CCCCCC"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ou"
                android:textColor="#888888"
                android:layout_marginHorizontal="8dp"/>

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="#CCCCCC"/>
        </LinearLayout>

        <!-- FACEBOOK -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="24dp"
            >

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/facebook"
                android:layout_marginEnd="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bouton_facebook"
                android:textColor="@color/facebook_blue"
                android:textStyle="bold"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
